--- a/Capitoli/Descrizione_approfondita.tex
+++ b/Capitoli/Descrizione_approfondita.tex
@@ -4,7 +4,7 @@
 % !TEX spellcheck = it-IT
 
 %************************************************
-\chapter{Descrizione approfondita dell'argomento}
+\chapter{Descrizione dell'argomento}
 \label{cap:descrizione}
 %************************************************
 \section{Problema da risolvere} Lo scopo di questa tesi è quello di calcolare in
