Adding some thinks from the note

--- a/Capitoli/Descrizione_approfondita.tex
+++ b/Capitoli/Descrizione_approfondita.tex
@@ -22,10 +22,13 @@ E' possibile utilizzare strumenti di visualizzazione di modelli 3D specifici per
 Questo ripropone i problemi dati dalla scelta di un software di grafic design in quanto prevede che ci sia un software o un "tecnico" che generi il file nel formato richiesto rendendo l'applicativo non automatizzabile.
 
 \subsection{Programmazione}
+Attraverso alcuni linguaggi di programmazione è possibile calcolare il raster di output. Per esempio è possibile farlo con Mathlab, R o Python con tempi di esecuzione diverso in base al linguaggio e a quanto è stato ottimizzato il codice che esegue queste operazioni. 
+
+Questo risolve il problema dell'automatizzazione del processo, permettendo così di creare un servizio di elaborazione dei dati autonomo e indipendente dall'essere umano, ma non realizza l'altro punto importante del progetto: non permette di visualizzare i dati in input ne in output.
+
 \subsection{Desktop QGis}
 
-Questo è stato fatto utilizzando un modello RUSLE basato sull'equazione\footnote{Il
-modello proposto è quello indicato in \cite[p.~37]{tesi:ambientale}}
+Questo è stato fatto utilizzando un modello RUSLE basato sull'equazione\footnote{Il modello proposto è quello indicato in \cite[p.~37]{tesi:ambientale}}
 
 \begin{equation} \label{eq:main}
 A = R * K * LS * C * P
