--- a/impostazioni-tesi.tex
+++ b/impostazioni-tesi.tex
@@ -12,7 +12,7 @@
 \newcommand{\myLocation}{Magdeburgo}                         % dove
 \newcommand{\myTime}{Dicembre 2011}                          % quando
 
-
+\linespread{1.5}
 
 %*********************************************************************************
 % Impostazioni di amsmath, amssymb, amsthm
