--- a/Tesi.tex
+++ b/Tesi.tex
@@ -3,7 +3,7 @@
 % !TEX root = Tesi.tex
 % !TEX spellcheck = it-IT
 
-\documentclass[10pt,%                      % corpo del font principale
+\documentclass[14pt,%                      % corpo del font principale
                a4paper,%                   % carta A4
                twoside,openright,%         % fronte-retro
 %              oneside,openany,%           % solo fronte
@@ -94,8 +94,10 @@
 \input{MaterialeInizialeFinale/Introduzione}
 \input{Capitoli/Descrizione_approfondita}
 \input{Capitoli/Realizzazione}
-\appendix
-\input{Capitoli/Appendice}
+
+% \appendix
+% \input{Capitoli/Appendice}
+
 % *****************************************************************
 % Materiale finale
 %******************************************************************
