--- a/MaterialeInizialeFinale/Indici.tex
+++ b/MaterialeInizialeFinale/Indici.tex
@@ -13,28 +13,29 @@
 %\markboth{\contentsname}{\contentsname} 
 \clearpage
 
-\begingroup 
-    \let\clearpage\relax
-    \let\cleardoublepage\relax
-    \let\cleardoublepage\relax
+%
+%\begingroup 
+%    \let\clearpage\relax
+%    \let\cleardoublepage\relax
+%    \let\cleardoublepage\relax
     %*******************************************************
     % Elenco delle figure
     %*******************************************************    
-    \phantomsection
-    \pdfbookmark{\listfigurename}{lof}
-    \listoffigures
+%    \phantomsection
+%    \pdfbookmark{\listfigurename}{lof}
+%    \listoffigures
 
-    \vspace*{8ex}
+%    \vspace*{8ex}
 
     %*******************************************************
     % Elenco delle tabelle
     %*******************************************************
-    \phantomsection
-    \pdfbookmark{\listtablename}{lot}
-    \listoftables
+%    \phantomsection
+%    \pdfbookmark{\listtablename}{lot}
+%    \listoftables
         
-    \vspace*{8ex}
+%    \vspace*{8ex}
        
-\endgroup
+%\endgroup
 
 \cleardoublepage
