Adding point to the Descrizione Approfondita

--- a/Capitoli/Descrizione_approfondita.tex
+++ b/Capitoli/Descrizione_approfondita.tex
@@ -139,9 +139,13 @@ Questo sistema riesce a essere quello più adattabile alle nostre necessità ma 
 
 Software che permette di visualizzare e elaborare raster e altri formati di file geomorfici. Molto usato e supporta, nativamente o attraverso plugin installabili, la quasi totalità dei formati di file esistenti. In oltre permette, attraverso codice python, c e c++, di estendere le funzionalità del programma stesso.
 
-Il vantaggio fondamentale di questo sistema è l'estremo supporto di formati diversi e la presenza di un motore grafico che permette la visualizzazione corretta dei dati, con supporto con i formati di file per mappe e con i servizi online come google maps. La sua installazione, in oltre, contiene alcune delle librerie più complete per quanto riguarda le operazioni sui raster e array.
-
-Invece comporta anche dei diffetti. Limita infatti sia i linguaggi\footnote{E' possibile sviluppare solo per Python, C e C++ i plugin anche se consigliano di usare Python per una questione di velocità di sviluppo} in cui è possibile sviluippare un plugin o estensione e ha solo alcune delle maggiori librerie diponibili.
+\begin{itemize}
+	\item{Ripetibile} una volta scritto il plugin risulta riutibilizzabile semplicemente cambiando i dati.
+	
+	\item{Automatizzabile} Se scritto correttamente il plugin può effettuare la task assegnata in modo automatico ricevendo i dati da un altro processo.
+	
+	\item{Visuabilizzabile} QGis dispone di un intero motore di renderig integrato che permette 
+\end{itemize}
 
 \section{QGis}
 
