--- a/Tesi.tex
+++ b/Tesi.tex
@@ -1,4 +1,4 @@
-% !TEX encoding = UTF-8 Unicode
+% !0TEX encoding = UTF-8 Unicode
 % !TEX TS-program = pdflatex
 % !TEX root = Tesi.tex
 % !TEX spellcheck = it-IT
