--- a/MaterialeInizialeFinale/Frontespizio.tex
+++ b/MaterialeInizialeFinale/Frontespizio.tex
@@ -13,8 +13,9 @@
 \Corso[Laurea]{Informatica}
 \Annoaccademico{2015--2016}
 \Titoletto{Tesi di laurea}
-\Titolo{Titolo}
-\Sottotitolo{Sottotitolo}
+\Titolo{Implementazione del modello RUSLE attraverso plugin per QGis}
+\Sottotitolo{Titolo provvisorio
+}
 \Candidato[845087]{Matteo Scarpa}
 \Relatore{Claudio Silvestri}
 \end{frontespizio}
