--- a/Tesi.tex
+++ b/Tesi.tex
@@ -1,7 +1,7 @@
 % !0TEX encoding = UTF-8 Unicode
 % !TEX TS-program = pdflatex
 % !TEX root = Tesi.tex
-% !TEX spellcheck = it-IT
+% !TeX spellcheck = it_IT
 
 \documentclass[14pt,%                      % corpo del font principale
                a4paper,%                   % carta A4
